--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@types/node": "^18.8.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-config": "^5.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "less": "^4.1.3",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
