--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "antd": "^4.23.5",
     "echarts": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,9 @@
     "@types/react-router-config": "^5.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "less": "^4.1.3",
+    "rollup-plugin-visualizer": "^5.8.2",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-imp": "^2.3.0"
   }
 }
