--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.6",
     "antd": "^4.23.5",
+    "axios": "^1.3.0",
     "echarts": "^5.4.0",
+    "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -28,6 +30,7 @@
     "rollup-plugin-visualizer": "^5.8.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vite-plugin-imp": "^2.3.0"
+    "vite-plugin-imp": "^2.3.0",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
